--- a/Twitter/TweetTableViewCell.xib
+++ b/Twitter/TweetTableViewCell.xib
@@ -30,8 +30,8 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qaO-il-fwD">
-                        <rect key="frame" x="8" y="13" width="70" height="70"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qaO-il-fwD">
+                        <rect key="frame" x="8" y="13" width="70" height="69"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="RrZ-OP-4vJ"/>
                         </constraints>
